RESOLVED FIXED75182
JPEG decoders should only save color profile markers if color management is enabled
https://bugs.webkit.org/show_bug.cgi?id=75182
Summary JPEG decoders should only save color profile markers if color management is e...
noel gordon
Reported 2011-12-23 19:17:16 PST
JPEG Color profile support was added in bug 48819. Color profile (JPEG_APP0 + 2) markers are currently stored even if color management is disabled. We should only read and retain color profile markers if color management is enabled.
Attachments
Patch (2.06 KB, patch)
2011-12-23 19:35 PST, noel gordon
no flags
Patch (149.52 KB, patch)
2011-12-24 02:20 PST, noel gordon
no flags
Patch (150.21 KB, patch)
2011-12-24 02:41 PST, noel gordon
rniwa: review+
webkit.review.bot: commit-queue-
noel gordon
Comment 1 2011-12-23 19:35:24 PST
WebKit Review Bot
Comment 2 2011-12-23 21:45:50 PST
Comment on attachment 120484 [details] Patch Clearing flags on attachment: 120484 Committed r103651: <http://trac.webkit.org/changeset/103651>
WebKit Review Bot
Comment 3 2011-12-23 21:45:55 PST
All reviewed patches have been landed. Closing bug.
Ryosuke Niwa
Comment 4 2011-12-23 22:56:02 PST
fast/images/ycbcr-with-cmyk-color-profile.html started failing after this change. Is this expected? http://test-results.appspot.com/dashboards/flakiness_dashboard.html#showExpectations=true&tests=fast%2Fimages%2Fycbcr-with-cmyk-color-profile.html
noel gordon
Comment 5 2011-12-24 02:07:45 PST
(In reply to comment #4) > fast/images/ycbcr-with-cmyk-color-profile.html started failing after this change. Is this expected? Nope, results look good to me, needs a rebaseline.
noel gordon
Comment 6 2011-12-24 02:20:04 PST
Reopening to attach new patch.
noel gordon
Comment 7 2011-12-24 02:20:13 PST
noel gordon
Comment 8 2011-12-24 02:40:29 PST
Just noticed http://trac.webkit.org/changeset/103653, need to undo that.
noel gordon
Comment 9 2011-12-24 02:41:54 PST
noel gordon
Comment 10 2011-12-24 02:51:02 PST
(In reply to comment #5) > Is this expected? Chrome Skia Mac and Chrome CG Mac produce minor paint differences.
WebKit Review Bot
Comment 11 2011-12-24 10:45:53 PST
Comment on attachment 120490 [details] Patch Rejecting attachment 120490 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/11027442
Ryosuke Niwa
Comment 12 2011-12-24 10:56:27 PST
Note You need to log in before you can comment on or make changes to this bug.