JPEG decoders should only save color profile markers if color management is enabled https://bugs.webkit.org/show_bug.cgi?id=75182

Reviewed by Adam Barth.

No new tests. Covered by existing tests.
    fast/images/ycbcr-with-cmyk-color-profile.html
    fast/images/gray-scale-jpeg-with-color-profile.html
    fast/images/cmyk-jpeg-with-color-profile.html
    fast/images/color-jpeg-with-color-profile.html

* platform/image-decoders/jpeg/JPEGImageDecoder.cpp:
(WebCore::JPEGImageReader::JPEGImageReader):  Store color profile (JPEG_APP0 + 2) markers
using the iccjpeg helper setup_read_icc_profile() if color management is enabled.


Canonical link: https://commits.webkit.org/91956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103651 268f45cc-cd09-0410-ab3c-d52691b4dbfc